--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "msu-latentafis"]
-	path = msu-latentafis
+[submodule "submodules/msu-latentafis"]
+	path = submodules/msu-latentafis
 	url = git@gitlab.nist.gov:774_03/finger/msu-latentafis.git
