--- a/libmsu-compare/CMakeLists.txt
+++ b/libmsu-compare/CMakeLists.txt
@@ -47,7 +47,7 @@ if (WITH_OPENMP)
 	find_package(OpenMP)
 	if (TARGET OpenMP::OpenMP_CXX)
 		target_link_libraries(${LIB_NAME} PRIVATE OpenMP::OpenMP_CXX)
-	elseif (WITH_OPENMP)
+	else()
 		message(FATAL_ERROR "OpenMP requested, but not found")
 	endif()
 endif()
